--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,19 @@
                 ARIM Messaging Program Change Log
                 ---------------------------------
 
+v2.2  11Aug2018
+---------------
+1. Introduce progress meter feature for file, message, query response,
+   and directory listing data transfers. The meter is located on the
+   status bar and appears when an upload or download begins to
+   indicate percentage of completion as the tranfer progresses.
+   Suggested by Doug, WB6VAC, thanks!
+2. Fix bug where remote file listing view didn't close and return to
+   the traffic monitor view when the 'cd' command was invoked.
+3. Extend dwell time of status bar messages to 5 seconds.
+4. Correct errors in arim.5 man page.
+5. Update the PDF Help doc.
+
 v2.1  23Jul2018
 ---------------
 1. Adapt to changes in ARDOP 2 introduced in ARDOP_2Win version 2.0.4
