--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@
                        ARIM Release Notes
 =====================================================================
 
+Version 1.12
+------------
+* Do not send PING command to TNC if it's not in DISC state.
+* In FEC mode, don't start download progress meter when ARIM
+  message frames addressed to a different station are heard.
+* If the command prompt is active, but empty, pressing the backspace
+  key will deactivate it.
+
 Version 1.11
 ------------
 * Introduce progress meter feature for file, message, query response,
