--- a/arim.5
+++ b/arim.5
@@ -1,5 +1,5 @@
 
-.TH "ARIM" 5 "2018-07-28" "ARIM Messaging Program" "arim"
+.TH "ARIM" 5 "2018-11-24" "ARIM Messaging Program" "arim"
 .SH NAME
 arim - related files
 .SH FILES
@@ -11,12 +11,23 @@ This is an "INI File" format configuration file for ARIM, which is read on progr
 Each ARDOP TNC is configured in a separate [tnc] section. The first [tnc] section in the file defines port 1, the second port 2, and so on. The limit is 10 TNC definitions.
 .RS 7
 .TP
+\fBinterface\fR
+The TNC interface type, either TCP for connecting to a software TNCs like ardop2 or ARDOP_2Win, or SERIAL for connecting to the TNC-Pi9K6 hardware TNC. Default: TCP.
+.TP
 \fBipaddr\fR
-The IP address of the TNC, either in "dotted quad" numerical form or a host name e.g. "localhost" or "DELL-1520.example.net". Max length for host names is 253 characters. Default: localhost. NOTE: on Cygwin, 'localhost' may not work as the address for an ARDOP_Win instance running on the same Windows PC. Use the IP address of the Windows host instead, e.g. "192.168.1.54", as discovered by running ipconfig in the Cygwin terminal. Set this address in the ARDOP_Win TNC "Virtual TNC Setup" dialog box as well.
+The IPv4 address of the TNC, either in "dotted quad" numerical form or a host name e.g. "localhost" or "DELL-1520.example.net". Max length for host names is 253 characters. Default: 127.0.0.1. NOTE: on hosts with IPv6 enabled, 'localhost' may not work as the address for an ARDOP instance running on the same host. Use the IPv4 address of the host or the IPv4 loopback address "127.0.0.1" instead. The IPv4 address can be discovered by running the \fIipconfig\fR program from the command line. If running ARDOP_Win or ARDOP_2Win, set this address in the "Virtual TNC Setup" dialog box as well.
 .TP
 \fBport\fR
 The TCP port on which the TNC is listening. Default: 8515.
-mycall The station callsign, e.g. NW8L or NW8L-4, max length 10 characters. Call must be no longer than 7 characters and may have optional SSID in ranges: -A to -Z or -0 to -15. ARIM will respond to queries and messages addressed to this call. Messages will be stored in the inbox. Default: NOCALL.
+.TP
+\fBserial-port\fR
+The serial port device name, for example /dev/serial0, used to connect to the TNC-Pi9K6 hardware TNC on a Raspberry Pi host. Max length for device names is 63 characters. Default: /dev/serial0.
+.TP
+\fBserial-baudrate\fR
+The baud rate for the serial port used to connect to the TNC-Pi9K6 hardware TNC, either 9600, 19200, 38400, 57600 or 115200. Default: 115200.
+.TP
+\fBmycall\fR
+The station callsign, e.g. NW8L or NW8L-4, max length 10 characters. Call must be no longer than 7 characters and may have optional SSID in ranges: -A to -Z or -0 to -15. ARIM will respond to queries and messages addressed to this call. Messages will be stored in the inbox. Default: NOCALL.
 .TP
 \fBnetcall\fR
 A net callsign, e.g. RRNET, max length 10 characters. Any printable characters are allowed. When sending a message to this call, no ACK is expected. When receiving, ARIM will recognize messages addressed to this call and store them in the inbox but no ACK will be returned to prevent channel congestion. ARIM will not respond to queries addressed to the net call. Starting with ARIM v0.27, up to 8 net callsigns may be defined for a TNC. Default: one netcall, QST.
@@ -25,7 +36,9 @@ A net callsign, e.g. RRNET, max length 10 characters. Any printable characters a
 The station's grid square locator. It must be a well formed Maidenhead locator, either 4, 6 or 8 characters long. For example: DM65 or DM65qf or DM65qf15. Letter pairs are not case-sensitive. Default: DM65.
 .TP
 \fBbtime\fR The beacon interval time in minutes, or 0 to disable the beacon. Max time is 999 minutes. Default: 0.
-reset-btime-on-tx Controls whether or not the beacon timer is reset when the station transmits an ARDOP frame. This is useful to prevent beacon transmissions from interfering with traffic between stations, e.g. on a net. This setting has no effect when the beacon is disabled. Set to TRUE to enable beacon timer reset on transmit, FALSE to disable it. Default: FALSE.
+.TP
+\fBreset-btime-on-tx\fR
+Controls whether or not the beacon timer is reset when the station transmits an ARDOP frame. This is useful to prevent beacon transmissions from interfering with traffic between stations, e.g. on a net. This setting has no effect when the beacon is disabled. Set to TRUE to enable beacon timer reset on transmit, FALSE to disable it. Default: FALSE.
 .TP
 \fBname\fR
 A name assigned to the TNC and advertised by the beacon, e.g. RRNET/ARIM. This is also returned when the TNC receives the ARIM 'pname' query. Max length is 31 characters. Default: Empty.
@@ -34,7 +47,13 @@ A name assigned to the TNC and advertised by the beacon, e.g. RRNET/ARIM. This i
 Information describing the TNC, returned in response to the 'info' query. Use the character pair \n to indicate a line break if you want to format the text into multiple lines; this will be converted to a newline character in the response. Max length is 127 characters. Default: Empty.
 .TP
 \fBfecmode\fR
-The initial ARDOP FECMODE. This is the frame type, in the format modulation.bandwidth.baudrate. Max length is 20 characters. Default: 4PSK.200.50.
+The initial ARDOP FECMODE. This is the frame type, in the format modulation.bandwidth.baudrate. Max length is 20 characters. Default: 4PSK.200.50. Available modes are:
+.PP
+.RS
+\fBARDOP v1.x\fR 4FSK.200.50S, 4FSK.500.100S, 4FSK.500.100, 4FSK.2000.600S, 4FSK.2000.600, 4PSK.200.100S, 4PSK.200.100, 8PSK.200.100, 4PSK.500.100, 8PSK.500.100, 4PSK.1000.100, 8PSK.1000.100, 4PSK.2000.100, 8PSK.2000.100, 16QAM.200.100, 16QAM.500.100, 16QAM.1000.100 or 16QAM.2000.100.
+.PP
+\fBARDOP v2.x\fR 4PSK.200.50, 4PSK.200.100, 16QAM.200.100, 4FSK.500.50, 4PSK.500.50, 16QAMR.500.100, 16QAM.500.100, 4FSK.1000.50, 4PSKR.2500.50, 4PSK.2500.50, 16QAMR.2500.100 or 16QAM.2500.100.
+.RE
 .TP
 \fBfecrepeats\fR
 The initial ARDOP FECREPEATS value. This is the number of times each FEC frame will be repeated by the sender. This may be useful when propagation is poor, but at thecost of reduced throughput - depending on FEC mode, an ARIM frame may extend across multiple ARDOP FEC frames, each of which will be repeated. Max value is 5. Default: 0.
@@ -60,15 +79,29 @@ Controls whether or not the TNC listens for ARQ connect requests or pings from o
 \fBenpingack\fR
 Controls whether or not the TNC responds to pings from other stations. Set to TRUE to enable ping ACKs, FALSE to disable them. Default: TRUE. Note: works only with ARDOP TNC version 0.9.5 or higher.
 .TP
-\fBarq-bandwidth\fR
-Sets the ARQ connection bandwidth. The value must be one of: 200, 500 or 2500. Default is 500.
-arq-timeout The inactivity timeout for ARQ connections in seconds. Range is 30-600. Default: 120.
+\fBtnc-init-cmd\fR
+Specifies a TNC initialization command to send when ATTACHING to a TNC. For example:
+.PP
+.RS
+tnc-init-cmd = LEADER 300
+.PP
+This is useful for passing TNC commands which are not managed by ARIM, such as (future) radio control commands, and for TNC test and development purposes. Commands are send verbatim without validation of the command name or its parameters. Max length is 128 characters. You may define no more than 32 \fItnc-init-cmd\fR parameters. Default: None.
+.RE
 .TP
-\fBarq-negotiate-bw\fR
-Controls whether or not the TNC will negotiate ARQ bandwidth for incoming connections. Set to TRUE to enable, FALSE to disable. Default: TRUE.
+\fBarq-bandwidth\fR
+Sets the ARQ connection bandwidth. Default: 500. Available bandwidths are:
+.PP
+.RS
+\fBARDOP v1.x\fR 200MAX, 500MAX, 1000MAX, 2000MAX, 200FORCED, 500FORCED, 1000FORCED or 2000FORCED.
+.PP
+\fBARDOP v2.x\fR 200, 500 or 2500.
+.RE
 .TP
 \fBarq-timeout\fR
 The inactivity timeout for ARQ connections in seconds. Range is 30-600. Default: 120.
+.TP
+\fBarq-negotiate-bw\fR
+Controls whether or not the TNC will negotiate ARQ bandwidth for incoming connections. Set to TRUE to enable, FALSE to disable. Default: TRUE.
 .TP
 \fBarq-sendcr\fR
 Controls whether or not CRLF line endings are sent in ARQ mode, instead of Unix style LF endings. Set to TRUE to send CR, FALSE to send only LF. Default: TRUE.
@@ -82,11 +115,13 @@ The callsign used as the "from" address for messages. Default: NOCALL.
 .TP
 \fBsend-repeats\fR
 The number of times an ARIM message will be repeated in the absence of an ACK response from the recipient. It is recommended that this value not exceed 3to prevent tying up the channel with repeats in poor conditions. Default: 0.
-ack-timeout The maximum time in seconds after sending a message that ARIM will wait for an ACK before repeating it. Applies when send-repeats is not 0. Max is 999 seconds. Default: 30.
+.TP
+\fBack-timeout\fR
+The maximum time in seconds after sending a message that ARIM will wait for an ACK before repeating it. Applies when send-repeats is not 0. Max is 999 seconds. Default: 30.
 .TP
 \fBfecmode-downshift\fR
 Controls whether or not the FEC mode is progressively "downshifted", or changed to a more robust mode each time an ARIM message is repeated after a NAK or ACK timeout. Set to TRUE to enable, FALSE to disable downshifting. Default: FALSE.
-This works in tandem with the 'send-repeats' parameter. If 'fecmode-downshift' is TRUE and 'send-repeats' is nonzero, then progressively more robust FEC modes are used for re-transmissions after a NAK or timeout. The mode of last resort is 4PSK.200.50. For example, if the initial mode is 4PSK.500.100, then downshifting would progress to 4FSK.500.100, then 16QAM.200.100, and so on. The original FEC mode is restored after the message send operation completes. This is experimental. There are many kinds of channel impairments and no single downshift strategy is best for all. For details look at the FEC mode downshift table in the msg.c source code file.
+This works in tandem with the 'send-repeats' parameter. If 'fecmode-downshift' is TRUE and 'send-repeats' is nonzero, then progressively more robust FEC modes are used for re-transmissions after a NAK or timeout. The mode of last resort is 4PSK.200.50. For example, if the initial mode is 4PSK.500.100, then downshifting would progress to 4FSK.500.100, then 16QAM.200.100, and so on. The original FEC mode is restored after the message send operation completes. This is experimental. There are many kinds of channel impairments and no single downshift strategy is best for all. For details look at the FEC mode downshift table in the \fIarim_proto.c\fR source code file.
 .TP
 \fBframe-timeout\fR
 The time in seconds after which an incomplete ARIM frame will be abandoned and the receive buffer cleared. Because an ARIM frame may be spread over many ARDOP frames, a failure to receive one or more ARDOP frames will cause an ARIM timeout. Max is 999 seconds. Default: 30.
@@ -95,7 +130,7 @@ The time in seconds after which an incomplete ARIM frame will be abandoned and t
 The directory in which files available for other stations to read are located. This can be an absolute path or a relative path rooted in the ARIM working directory and must be terminated with a '/' character. Max length is 255 characters. Default: files/
 .TP
 \fBadd-files-dir\fR
-Specifies an additional shared files directory accessible to remote stations. This must be a path relative to the shared files root directory specified by the \fIfiles-dir\fR parameter. By default, only files in the shared files root directory may be listed or downloaded, and any directories it contains are hidden. If you need to share files organized into multiple directories, use the 'add-files-dir' parameter to expose them. For example:
+Specifies an additional shared files directory accessible to remote stations. This must be a path relative to the shared files root directory specified by the \fIfiles-dir\fR parameter. By default, only files in the shared files root directory may be listed or downloaded, and any directories it contains are hidden. If you need to share files organized into multiple directories, use the \fIadd-files-dir\fR parameter to expose them. For example:
 .PP
 .RS
 add-files-dir = forms/
@@ -143,7 +178,12 @@ When pilot pings are enabled, this is the threshold by which signal reports from
 .TP
 \fBdebug-log\fR
 Set to TRUE to enable debug logging, FALSE to disable it. Default: FALSE.
-traffic-log Set to TRUE to enable traffic logging, FALSE to disable it. Default: TRUE.
+.TP
+\fBtraffic-log\fR
+Set to TRUE to enable traffic logging, FALSE to disable it. Default: TRUE.
+.TP
+\fBtncpi9k6-log\fR
+Set to TRUE to enable TNC-Pi9K6 debug logging, FALSE to disable it. Default: TRUE.
 .RE
 .TP
 \fB[ui]\fR User interface settings appear in this section.
