--- a/README
+++ b/README
@@ -7,12 +7,11 @@ The latest version can always be found at:
 
 Visit this page for documentation and source code downloads.
 
-For support, news and updates, join one or more of the following Yahoo
-groups.
+For support, news and updates, join one or both of these Groups.io groups:
 
   * arim-ham
-    For users of arim. Latest source code distribution found here.
-    http://groups.yahoo.com/group/arim-ham/
+    For users of ARIM and gARIM. Latest source code distribution found here.
+    https://groups.io/g/arim-ham
 
   * ardop users group
     General discussion on the ARDOP TNC and related software.
