--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,41 @@
                 ARIM Messaging Program Change Log
                 ---------------------------------
 
+v2.8 22Dec2019
+--------------
+1. Allow specification of [tnc] specific log file directories in
+   the arim.ini file. This permits the logging output of different
+   TNCs to be directed into separate locations outside the default log
+   directory. Use this feature when running multiple instances of
+   ARIM concurrently so logging output from the TNCs isn't intermixed
+   in the default log files. The following new parameters can be used
+   in a [tnc] section:
+   -- 'log-dir' is used to specify the directory. The value may be
+      either a relative or absolute path. If a relative path is given
+      it is made relative the the user's home directory. Examples:
+        /home/nw8l/tnc1-logs (absolute)
+        tnc2-logs (relative, full path is /home/nw8l/tnc2-logs)
+      If the directory doesn't exist it will be created. Be careful
+      specifying absolute paths; the user invoking arim must have
+      permissions to create and write to files in that directory.
+   -- 'traffic-log' is set to TRUE to enable traffic logging in the
+      directory specified by the 'log-dir' parameter. Set to FALSE to
+      disable logging. Default: FALSE.
+   -- 'debug-log' is set to TRUE  enable debug logging in the directory
+      specified by the 'log-dir' parameter. Set to FALSE to disable
+      logging. Default: FALSE.
+   -- 'tncpi9k6-log' is set to TRUE to enable TNC-Pi9K6 debug logging
+      in the directory specified by the 'log-dir' parameter. Set to
+      FALSE to disable logging. Default: FALSE.
+   If one or more of 'traffic-log', 'debug-log' or 'tncpi9k6-log' are
+   set to TRUE, then logging output for this TNC is directed to the
+   directory specified by 'log-dir'. If 'traffic-log', 'debug-log'
+   and 'tncpi9k6-log' are all absent or all set to FALSE, then the
+   global settings in the [log] section are used, and logging output
+   is directed to the default log directory.
+   Thanks to Kevin, K3TL for suggesting this.
+2. Update arim(5) man page and Help document.
+
 v2.7 27Apr2019
 --------------
 1. Add "ARQ File History" tab. This reports inbound and outbound
@@ -58,7 +93,7 @@ v2.5 17Feb2019
    when initiating ARQ connections from the command prompt.
 7. Messages sent to net addresses are now stored in the Sent Messages
    mailbox if successfully transmitted.
-8. Update garim(5) man page and Help document.
+8. Update arim(5) man page and Help document.
 
 v2.4 26Nov2018
 --------------
