--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,12 @@
                        ARIM Release Notes
 =====================================================================
 
+Version 2.10
+------------
+* Reset application state and UI after detecting unexpected shut
+  down of VARA modem.
+* Update Help document.
+
 Version 2.9
 -----------
 * Refine logic used to calculate the number of bytes sent during a
